[gd_scene load_steps=6 format=3 uid="uid://dtp6ge4k538q"]

[ext_resource type="Script" path="res://scripts/health_pickup.gd" id="1_hfjgn"]

[sub_resource type="BoxMesh" id="BoxMesh_wbtdo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ftijv"]
albedo_color = Color(0, 1, 0, 1)
emission_enabled = true
emission_energy_multiplier = 3.46

[sub_resource type="BoxMesh" id="BoxMesh_qjgot"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y7so5"]

[node name="HealthPickup" type="Node3D" node_paths=PackedStringArray("indicator", "area") groups=["health_pickups"]]
script = ExtResource("1_hfjgn")
indicator = NodePath("Indicator")
area = NodePath("Area3D")

[node name="Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.344639, 0)
mesh = SubResource("BoxMesh_wbtdo")
surface_material_override/0 = SubResource("StandardMaterial3D_ftijv")

[node name="Base" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.198596, 0)
mesh = SubResource("BoxMesh_qjgot")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.304607, 0)
shape = SubResource("BoxShape3D_y7so5")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
